# wxwork_robotd

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  appveyor.yml  build-release.sh  debug_run.bat  debug_run.ps1  enc.in  input.txt
.github/workflows/: build-on-linux.yml  build-on-macos.yml  build-on-windows.yml  main.yml  rust.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
etc/: conf.json
etc/firewalld/: wxwork_robotd.xml
etc/init.d/: wxwork_robotd
etc/systemd/: wxwork_robotd.service
etc/systemv/: wxwork_robotd
src/: app.rs  main.rs
src/handles/: default.rs  idea.rs  key_sign.rs  mod.rs  robot.rs
src/logger/: mod.rs
src/wxwork_robot/: base64.rs  command.rs  command_runtime.rs  error.rs  message.bak.rs  message.rs  mod.rs  project.rs
tools/: __init__.py  pylintrc  qyapi_wx_send_robot.py
