[package]
authors = ["owent <admin@owent.net>"]
categories = [
  "network-programming",
  "web-programming::http-server",
  "web-programming::http-client",
  "development-tools",
]
description = "Robot service for WXWork"
documentation = "https://github.com/owent/wxwork_robotd"
edition = "2021"
homepage = "https://crates.io/crates/wxwork_robotd"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "Cross.toml",
  "README.md",
  "tools/__init__.py",
  "tools/qyapi_wx_send_robot.py",
]
keywords = ["wxwork", "wework", "robot", "weixin", "wechat"]
license = "MIT OR Apache-2.0"
name = "wxwork_robotd"
readme = "README.md"
repository = "https://github.com/owent/wxwork_robotd"
version = "0.10.2"

[[bin]]
name = "wxwork_robotd"

[dependencies]
byteorder = "^1.5.0"
bytes = "^1.8.0"
chrono = ">=0.4.38"
futures = "^0.3.31"
handlebars = "^6.2.0"
hex = ">=0.3.2"
lazy_static = "^1.5.0"
log = ">=0.4.22"
mio-uds = "^0.6.7"
ring = ">=0.16.0"
rustls = ">=0.23.0"
quick-xml = ">=0.37.0"
regex = "^1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0.133"
aes = ">=0.8.4"
cbc = ">=0.1.2"
md-5 = ">=0.10.6"
cipher = { version = ">=0.4.0", features = ["alloc"] }
# https://github.com/RustCrypto
actix-web = { version = "^4.9.0", features = ["rustls"] }
actix-files = { version = ">=0.6.6" }

[dependencies.awc]
features = ["rustls"]
version = "^3.5.1"

[dependencies.clap]
features = ["std", "suggestions", "color", "cargo", "help"]
version = "^4.5.21"

[dependencies.tokio]
features = ["full"]
version = "^1.43.1"

[features]
system-alloc = []

[profile]
[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = false
lto = false
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
panic = "abort"
rpath = false
