[package]
authors = ["owent <admin@owent.net>"]
categories = [
  "network-programming",
  "web-programming::http-server",
  "web-programming::http-client",
  "development-tools",
]
description = "Robot service for WXWork"
documentation = "https://github.com/owent/wxwork_robotd"
edition = "2021"
homepage = "https://crates.io/crates/wxwork_robotd"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "Cross.toml",
  "README.md",
  "tools/__init__.py",
  "tools/qyapi_wx_send_robot.py",
]
keywords = ["wxwork", "wework", "robot", "weixin", "wechat"]
license = "MIT OR Apache-2.0"
name = "wxwork_robotd"
readme = "README.md"
repository = "https://github.com/owent/wxwork_robotd"
version = "0.10.3"

[[bin]]
name = "wxwork_robotd"

[dependencies]
byteorder = "^1.5.0"
bytes = "^1.11.1"
chrono = ">=0.4.43"
futures = "^0.3.31"
handlebars = "^6.4.0"
hex = ">=0.4.3"
lazy_static = "^1.5.0"
log = ">=0.4.29"
ring = ">=0.17.14"
rustls = ">=0.23.36"
quick-xml = ">=0.39.0"
regex = "^1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0.149"
aes = ">=0.8.4"
cbc = ">=0.1.2"
md-5 = ">=0.10.6"
cipher = { version = ">=0.4.0", features = ["alloc"] }
# https://github.com/RustCrypto
actix-web = { version = "^4.12.1", features = ["rustls"] }
actix-files = { version = ">=0.6.9" }

[dependencies.awc]
features = ["rustls"]
version = "^3.8.1"

[dependencies.clap]
features = ["std", "suggestions", "color", "cargo", "help"]
version = "^4.5.57"

[dependencies.tokio]
features = ["full"]
version = "^1.49.0"

[features]
system-alloc = []

[profile]
[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = false
lto = false
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
panic = "abort"
rpath = false
